k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-mongodb
spec:
  selector:
    matchLabels:
      app: auth-api-mongodb
  template:
    metadata:
      labels:
        app: auth-api-mongodb
    spec:
      containers:
      - name: auth-api-mongodb
        image: mongo
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-mongodb
spec:
  selector:
    app: auth-api-mongodb
  ports:
  - port: 27017
    targetPort: 27017
