k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-order-api
  template:
    metadata:
      labels:
        app: ticket-order-api
    spec: 
      containers:
      - name: ticket-order-api
        image: rifqio/order-service-ticket
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-order-api
spec:
  selector:
    app: ticket-order-api
  ports:
  - port: 5500
    targetPort: 5500
