k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-ticket-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-ticket-api
  template:
    metadata:
      labels:
        app: ticket-ticket-api
    spec: 
      containers:
      - name: ticket-ticket-api
        image: rifqio/ticket-service-ticket
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-ticket-api
spec:
  selector:
    app: ticket-ticket-api
  ports:
  - port: 5000
    targetPort: 5000
