k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-service
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: ticket-client-ui
            port:
              number: 3000
  - host: ticketing.api
    http: 
      paths:
        - pathType: ImplementationSpecific
          path: /api/users/?(.*)
          backend:
            service:
              name: ticket-auth-api
              port:
                number: 4000 
        - pathType: ImplementationSpecific
          path: /api/tickets/?(.*)
          backend:
            service:
              name: ticket-ticket-api
              port:
                number: 5000
